--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,47 +10,150 @@
          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
          crossorigin="anonymous"
       />
-      <title>My Test Web</title>
+      <style>
+         *,
+html {
+   margin: 0;
+   padding: 0;
+   top: 0;
+}
+
+:root {
+   --bg-image: url("https://telegra.ph/file/a54df028bcbbc13159e3e.jpg");
+   --bg-image1: url("https://telegra.ph/file/86b4306acb6c8a848e751.jpg");
+}
+
+body {
+   background-color: #1d1e22;
+   font-family: sans-serif;
+   display: flex;
+   flex-direction: column;
+}
+
+input {
+   background-color: transparent;
+   border: none;
+   box-shadow: 0 1px 0 #d84f00;
+}
+
+table {
+   border-radius: 5px;
+   text-align: center;
+   margin: auto;
+   width: 90%;
+   color: white;
+   border: 1px solid #d84f00;
+}
+
+.card {
+   margin: auto;
+   margin-top: 10%;
+   padding: 1rem;
+   width: 80%;
+   height: auto;
+   text-align: center;
+   color: white;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   position: relative;
+   background-color: transparent;
+   border-radius: 15px;
+   border: 2px solid #d84f00;
+}
+
+form input {
+   margin-top: 15px;
+   text-align: center;
+   height: 30px;
+   width: 300px;
+}
+
+button {
+   margin-top: 15px;
+   width: 200px;
+   height: 40px;
+}
+
+.bawah {
+   display: flex;
+   flex-direction: column;
+}
+
+.card h2 {
+   margin-bottom: 20px;
+}
+
+.bg-blur {
+   overflow: hidden;
+   background-color: transparent;
+}
+
+.bg-blur::before {
+   content: "";
+   background-image: var(--bg-image);
+   background-size: cover;
+   height: 100%;
+   width: 100%;
+   position: absolute;
+   filter: blur(10px);
+   z-index: -1;
+}
+
+@media (min-width: 750px) {
+   .bg-blur::before {
+      background-image: var(--bg-image1);
+   }
+}
+
+      </style>
+      <title>My study</title>
    </head>
    <body>
-      <h1><%= title %></h1>
-      <div class="container">
-         <table class="table">
+      <div class="bg-blur"></div>
+      <div class="card">
+         <h2>Selamat Datang</h2>
+         <p>Tambahkan User</p>
+         <form action="/tambah" method="post">
+            <input type="text" name="nama" placeholder="Nama Lengkap" />
+            <input type="text" name="alamat" placeholder="Alamat" />
+            <input type="text" name="kelas" placeholder="Kelas" />
+            <input type="number" name="nomer" placeholder="Nomer WhatsApp" />
+            <button class="btn btn-success" type="submit">Buat</button>
+         </form>
+            <p align="center" style="margin-top: 35px; color: white">
+         Untuk menghapus data
+            </p>
+         <form action="/hapus" method="post">
+            <input type="number" name="id" placeholder="Masukan Id" />
+            <button class="btn btn-danger" type="submit">Hapus</button>
+         </form>
+      </div>
+      <p align="center" style="margin-top: 35px; color: white">
+         Daftar Siswa Yang Ada
+      </p>
+      <div class="bawah">
+         <table border="2">
             <thead>
                <tr>
-                  <th scope="col">ID</th>
-                  <th scope="col">NAMA</th>
-                  <th scope="col">ALAMAT</th>
-                  <th scope="col">KELAS</th>
+                  <th>ID</th>
+                  <th>NAMA</th>
+                  <th>ALAMAT</th>
+                  <th>KELAS</th>
+                  <th>NOMER</th>
                </tr>
-            </thead>
-            <tbody>
                <% for (let user of siswa) { %>
                <tr>
-                  <th scope="row"><%= user.id %></th>
-                  <th scope="row"><%= user.nama %></th>
-                  <th scope="row"><%= user.alamat %></th>
-                  <th scope="row"><%= user.kelas %></th>
+                  <td><%= user.id%></td>
+                  <td><%= user.nama%></td>
+                  <td><%= user.alamat%></td>
+                  <td><%= user.kelas%></td>
+                  <td><%= user.nomer%></td>
                </tr>
                <% } %>
-            </tbody>
+            </thead>
          </table>
-         <h1>Tambah User</h1>
-         <form action="/tambah" method="post">
-            <div class="mb-3">
-               <label class="form-label">Nama Lengkap</label>
-               <input type="text" name="nama" class="form-control" />
-            </div>
-            <div class="mb-3">
-               <label class="form-label">Alamat</label>
-               <input type="text" name="alamat" class="form-control" />
-            </div>
-            <div class="mb-3">
-               <label class="form-label">Kelas</label>
-               <input type="text" name="kelas" class="form-control" />
-            </div>
-            <input type="submit" value="Tambah" class="btn bg-danger" />
-         </form>
       </div>
       <script
          src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
